@startuml
enum vectorType {
    Force,
    Velocity,
}
class VectorUI {
    + header : string
    + unit : string
    + showSize : float = .5f
    + Init() : void
}
MonoBehaviour <|-- VectorUI
VectorUI --> "vectorArrow" LineRenderer
VectorUI --> "astralBody" AstralBody
VectorUI --> "vectorText" Text
VectorUI --> "thisType" vectorType
@enduml
